Remove problematic pip install configuration from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,7 @@
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
-        "maxDuration": 10,
-        "pythonPath": ".",
-        "pipInstallArgs": "-r requirements.txt"
+        "maxDuration": 10
       }
     }
   ],
